--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "crypto-js": "^4.2.0",
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-datepicker": "^8.2.1",
